完善服务端接口
